--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "cinemapp",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^4.5.0",
     "@rails/webpacker": "^4.2.0",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
+    "mapbox-gl": "^1.5.0",
+    "places.js": "^1.17.0",
     "popper.js": "^1.16.0",
     "slick-carousel": "^1.8.1"
   },
