--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "mapbox-gl": "^1.5.0",
     "places.js": "^1.17.0",
     "popper.js": "^1.16.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.9.0"
